--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "web-work",
+  "name": "lib-productivio",
   "version": "0.0.1",
   "homepage": "./",
   "private": true,
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@reduxjs/toolkit": "1.9.3",
     "@testing-library/jest-dom": "5.16.5",
@@ -19,14 +25,13 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-spring": "9.7.1",
-    "sass": "1.55.0",
+    "sass": "^1.59.3",
     "typescript": "4.6.3",
     "universal-cookie": "4.0.4",
     "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rimraf dist && rollup -c",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
@@ -61,6 +66,9 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -73,6 +81,9 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
+    "rollup": "^3.19.1",
+    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-scss": "3",
     "webpack": "^5.76.1"
   }
 }
