--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@types/react-redux": "7.1.25",
     "axios": "1.3.4",
     "lodash": "4.17.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-icons": "4.8.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.2",
@@ -84,6 +82,8 @@
     "rollup": "3.19.1",
     "rollup-plugin-dts": "5.2.0",
     "rollup-plugin-scss": "3",
-    "webpack": "5.76.1"
+    "webpack": "5.76.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
