--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
         "quotes": ["error", "single"],
         "no-multi-spaces": "error",
         "key-spacing": "error",
-        "no-unused-vars": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "error",
         "indent": ["error", 2, { "SwitchCase": 1 }],
         "complexity": ["error", 30],
         "block-scoped-var": "error",
