--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "3.5.3",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/pickers": "3.3.10",
     "@reduxjs/toolkit": "1.9.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
