Loading animation added, lottie-react added, tsconfig updated for json

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "2.29.3",
     "dayjs": "1.11.7",
     "lodash": "4.17.21",
+    "lottie-react": "2.4.0",
     "react-icons": "4.8.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.2",
