--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "resolveJsonModule": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "build"]
