--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "typescript": "4.6.3",
     "universal-cookie": "4.0.4",
     "usehooks-ts": "2.1.1",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "husky": "^8.0.3"
   },
   "peerDependencies": {
     "react": "18.2.0"
@@ -47,9 +48,11 @@
     "build": "rimraf dist && rollup -c",
     "build-watch": "rimraf dist && rollup -wc",
     "test": "react-scripts test",
+    "test-ci": "react-scripts test --coverage --silent --watchAll=false",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
